--- a/.github/workflows/make_readme.yml
+++ b/.github/workflows/make_readme.yml
@@ -11,6 +11,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      REPO: https://${{github.actor}}:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git
 
     steps:
     - uses: actions/checkout@v2
@@ -24,3 +26,13 @@ jobs:
     - name: make readme
       run: |
         python -c "import leetcode; leetcode.convert.convert('code_.py', 'codes_')"
+    - uses: actions/checkout@v2
+      with:
+        ref: ${{github.event.pull_request.head.ref}}
+    - name: commit and push
+      run: |
+        git config --global user.email "tsutomu7@hotmail.co.jp"
+        git config --global user.name "SaitoTsutomu"
+        git add .
+        git commit -m 'modify README' && git push ${REPO} HEAD:${{github.event.pull_request.head.ref}} || true
+
